--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="Menu">
       <img src="./Ellipse 13.png"/>
       <span>
-        Controle finaceiro
+        Controle financeiro
       </span>
       <div class="ResponsiveMenu">
         <div class="Barra-icon">
@@ -65,7 +65,7 @@
          <td style="width: 100%;height: 0px; background-color: #333; border: transparent;"></td>
        </tr>
        <tr>
-         <td style="text-align: left;font-size: 14px;color: #333;padding: 5px;">+ Lorem ipsum dolor sit amet consectetur</td>
+         <td style="text-align: left;font-size: 14px;color: #333;padding:10px;">+ Lorem ipsum dolor sit amet <br style="margin: 20px;">  consectetur</br></td>
          <td style="text-align: right;font-size: 14px;color: #333;"><R1> R$12.999,99</R1></td>
        </tr>
        <tr>
@@ -82,7 +82,7 @@
        </tr>
        <tr>
          <td style="text-align: left;font-size: 14px;color: #333;">+ Lorem ipsum</td>
-         <td style="text-align: right;font-size: 14px;color: #333;padding: 10px;"><R1>R$9,99</R1></td>
+         <td style="text-align: right;font-size: 14px;color: #333;padding: 10px;"><R1>R$ 9,99</R1></td>
        </tr>
        <tr>
         <td style="width: 100%;height: 0px; background-color: #333; border:transparent;"></td>
